fix big with calc on firefox

--- a/DEVELOPPEMENT/~css/index.css
+++ b/DEVELOPPEMENT/~css/index.css
@@ -172,7 +172,7 @@ ul.drop {
 ul.drop li {
   line-height: 1.5em;
   vertical-align: middle;
-  zoom: 1;
+  zoom: calc(1);
   padding: 1.08px;
 }
 
@@ -200,7 +200,7 @@ header div.header-menu_header-buttons .header-nav ul li ul li a {
 }
 
 header div.header-menu_header-buttons .header-nav ul li ul li a:hover {
-  zoom: 1.02;
+  zoom: calc(1.02);
   text-shadow: -0.5px 0 var(--shadowColor), 0 0.5px var(--shadowColor),
     0.5px 0 var(--shadowColor), 0 -0.5px var(--shadowColor);
 }
@@ -309,7 +309,7 @@ header div.header-menu_header-buttons .header-nav ul li ul li a:hover {
     translateY(-20px) translateZ(0px) scale(1.4) skewY(-15deg);
   -ms-transform: rotateX(-9deg) rotateY(-49deg) rotateZ(0deg) translateX(-50px)
     translateY(-20px) translateZ(0px) scale(1.4) skewY(-15deg);
-  -o-transform: rotateX(-9deg) rotateY(-49deg) rotateZ(0deg) translateX(-50px)
+  -o-transform:rotateX(-9deg) rotateY(-49deg) rotateZ(0deg) translateX(-50px)
     translateY(-20px) translateZ(0px) scale(1.4) skewY(-15deg);
 }
 
